CSS: Fix spacing for chat tabs panels (#8)

--- a/scss/spacing.scss
+++ b/scss/spacing.scss
@@ -36,11 +36,6 @@
   padding: 0;
 }
 
-.chat-tabs__tabpanel {
-  width: 25%;
-  max-width: 50%;
-}
-
 .sidebar-section-link-wrapper .sidebar-section-link-prefix.image img {
   border-radius: calc(var(--d-border-radius) / 2);
 }
